# Assistente-Dados-Hospitalar

./: .gitignore  AWS_DEPLOY_STEP_BY_STEP.md  AWS_QUICK_START.md  CLOUD_FREE_OPTIONS.md  CONFIGURAR_VERCEL.md  CONTRIBUTING.md  CORRECOES_DEPLOY.md  DEBUG_BACKEND.md  DEPLOY.md  DEPLOY_FREE.md  EXPLICACAO_IDLE_TRANSACTION.md  GITHUB_SETUP.md  KEEP_RENDER_ALIVE.md  LICENSE  PROJETO.md  QUICK_DEPLOY.md  QUICK_TEST.md  README.md  README_EN.md  RENDER_CONFIG.md  RENDER_FIX.md  RENDER_FIX_FINAL.md  SETUP.md  STATUS_IMPLEMENTACAO.md  TESTING.md  VERCEL_CONFIG.md  VERCEL_RENDER_SETUP.md  VERIFICAR_VARIAVEL_VERCEL.md  docker-compose.yml  package.json  pnpm-workspace.yaml  render.yaml  vercel.json
apps/backend-fastapi/: .env.example  CHANGELOG.md  CONFIGURAR_LLM.md  Dockerfile  ENV_VARIABLES.md  MIGRATION_GUIDE.md  add_openai_key.ps1  pyproject.toml  run_schema.py  setup_env.ps1  test_db_connection.py
apps/backend-fastapi/config/: synonyms.json
apps/backend-fastapi/data/: response_cache.backup.20251126143101.json  response_cache.backup.20251126143605.json  response_cache.json
apps/backend-fastapi/docs/: SMART_DETECTION.md
apps/backend-fastapi/src/: config.py  database.py
apps/backend-fastapi/src/agents/: chat_pipeline.py  sql_agent.py
apps/backend-fastapi/src/api/: main.py
apps/backend-fastapi/src/connectors/: neondb_schema_service.py  rag_document_store.py
apps/backend-fastapi/src/domain/: cache_entry.py  document_catalog.py  llm_provider.py  privacy_guard.py  query_session.py  question_analysis.py  schema_info.py  (+2 more)
apps/backend-fastapi/tests/: conftest.py
(+117 files in other folders)
